--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ h1 {
 .headerSection{
   width: 100%;
   height: 650px;
-  background-image: url(https://as1.ftcdn.net/jpg/00/66/18/78/160_F_66187883_mqveEGhq4l15jPJ15WpkNKJoQok7HaYu.jpg);
+  background-image: url(../img/boston.jpeg);
   background-position: center;
   background-size: cover;
   border-bottom: solid 20px #2D9CDB;
