--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ h1 {
 .headerSection{
   width: 100%;
   height: 650px;
-  background-image: url(../img/boston.png);
+  background-image: url("../img/boston.png");
   background-position: center;
   background-size: cover;
   border-bottom: solid 20px #2D9CDB;
