--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ h1 {
 .headerSection{
   width: 100%;
   height: 650px;
-  background-color: #2D9CDB;
+  background: #2D9CDB;
   /*background-image: url("../img/boston.png");*/
   background-position: center;
   background-size: cover;
