--- a/css/style.css
+++ b/css/style.css
@@ -94,7 +94,7 @@ h1 {
 .headerSection{
   width: 100%;
   height: 650px;
-  background-image: url(../img/boston.jpeg);
+  background-image: url(https://github.com/wilson-portillo/portfolio/blob/master/img/boston.jpeg?raw=true);
   background-position: center;
   background-size: cover;
   border-bottom: solid 20px #2D9CDB;
