--- a/css/style.css
+++ b/css/style.css
@@ -69,7 +69,7 @@ section{
   text-align: center;
 }
 /*********************************************************/
-/*********************-HomeBanner-************************/
+/********************-Home Banner-************************/
 /*********************************************************/
 h1 {
   width: 53%;
@@ -94,14 +94,11 @@ h1 {
 .headerSection{
   width: 100%;
   height: 650px;
-  background-image: url(https://github.com/wilson-portillo/portfolio/blob/master/img/boston.jpeg);
+  background-image: url(https://github.com/wilson-portillo/portfolio/blob/master/img/boston.jpeg?raw=true);
   background-position: center;
   background-size: cover;
   border-bottom: solid 20px #2D9CDB;
 }
-/*********************************************************/
-/*********************-HomeBanner-************************/
-/*********************************************************/
 /*********************************************************/
 /*********************-Navigation-************************/
 /*********************************************************/
@@ -142,16 +139,7 @@ nav > ul > li {
   width: 17%;
 }
 /*********************************************************/
-/*********************-Navigation-************************/
-/*********************************************************/
-
-
-/*********************************************************/
-/*********************-HomeSection-**********************/
-/*********************************************************/
-
-/*********************************************************/
-/*********************-QuoteSection-**********************/
+/*********************-Quote Section-*********************/
 /*********************************************************/
 .quoteSection {
   width: 100%;
@@ -188,11 +176,7 @@ nav > ul > li {
   margin-top: 24px;
 }
 /*********************************************************/
-/*********************-QuoteSection-**********************/
-/*********************************************************/
-
-/*********************************************************/
-/*********************-AboutMeSection-********************/
+/********************-About Me Section-*******************/
 /*********************************************************/
 .aboutMeSection{
   width: 100%;
@@ -241,11 +225,7 @@ nav > ul > li {
   border-radius: 50%;
 }
 /*********************************************************/
-/*********************-AboutMeSection-********************/
-/*********************************************************/
-
-/*********************************************************/
-/*********************-SkillSetSection-*******************/
+/********************-Skill Set Section-******************/
 /*********************************************************/
 .skillSetSection {
   width: 100%;
@@ -271,6 +251,9 @@ nav > ul > li {
   font-size: 48px;
   text-transform: capitalize;
 }
+/*********************************************************/
+/********************-Development-************************/
+/*********************************************************/
 .development{
   width: 94%;
   height: 703px;
@@ -289,19 +272,16 @@ nav > ul > li {
   font-size: 36px;
   text-transform: capitalize;
 }
+/*********************************************************/
+/*********************-First WebSite-*********************/
+/*********************************************************/
 .websiteImg1 {
   width: 47.5%;
   height: 61%;
   margin-left: 0;
   margin-top: 1.7%;
 }
-.websiteImg2 {
-  width: 47.5%;
-  height: 61%;
-  margin-left: 16px;
-  margin-top: 10px;
-}
-/*********************************************/
+
 .websiteDiv1 {
   float: left;
   width: 38%;
@@ -338,7 +318,15 @@ nav > ul > li {
   line-height: normal;
   font-size: 32px;
 }
-/*********************************************/
+/*********************************************************/
+/*******************-Second Website-**********************/
+/*********************************************************/
+.websiteImg2 {
+  width: 47.5%;
+  height: 61%;
+  margin-left: 16px;
+  margin-top: 10px;
+}
 .websiteDiv2 {
   height: 99px;
   width: 39%;
@@ -378,6 +366,9 @@ nav > ul > li {
   position: relative;
   left: 19px;
 }
+/*********************************************************/
+/*******************-Graphic Design-**********************/
+/*********************************************************/
 .graphicDesign{
   width: 94%;
   height: 703px;
@@ -396,6 +387,9 @@ nav > ul > li {
   font-size: 36px;
   text-transform: capitalize;
 }
+/*********************************************************/
+/********************-First Design-***********************/
+/*********************************************************/
 .graphicDiv1 {
   background: #e1e1e1;
   width: 47.5%;
@@ -408,7 +402,6 @@ nav > ul > li {
   margin: 0 auto;
   height: 100%;
 }
-
 .graphicDiv2 {
   background: #e1e1e1;
   width: 47.5%;
@@ -422,6 +415,7 @@ nav > ul > li {
   margin-top: 8.2%;
   width: 100%;
 }
+
 .designDiv1 {
   float: left;
   width: 44%;
@@ -458,6 +452,22 @@ nav > ul > li {
   font-weight: 500;
   line-height: normal;
   font-size: 32px;
+}
+/*********************************************************/
+/*******************-Second Design-***********************/
+/*********************************************************/
+.graphicDiv2 {
+  background: #e1e1e1;
+  width: 47.5%;
+  height: 61%;
+  margin-left: 16px;
+  margin-top: 10px;
+  display: inline-block;
+}
+.graphicDiv2 img {
+  float: left;
+  margin-top: 8.2%;
+  width: 100%;
 }
 .designDiv2 {
   height: 99px;
@@ -499,7 +509,7 @@ nav > ul > li {
   left: 19px;
 }
 /*********************************************************/
-/*******************-SkillSetSection-*********************/
+/*******************-Experience Section-******************/
 /*********************************************************/
 .experienceSection{
   width: 100%;
@@ -539,6 +549,9 @@ nav > ul > li {
   font-size: 3.6em;
   text-align: center;
 }
+/*********************************************************/
+/*******************-Contact Section-*********************/
+/*********************************************************/
 .contactSection{
   width: 100%;
   height: 500px;
