--- a/css/style.css
+++ b/css/style.css
@@ -106,37 +106,41 @@ nav > ul {
   list-style: none;
   width: 50%;
   height: 32px;
-  margin: 36px 0 0 50%;
+  margin: 36px 0 0 47%;
   padding: 0;
   color: white;
 }
 nav > ul > li {
   float: left;
-  height: 32px;
+  height: 36px;
+}
+.butSize1, .butSize2, .butSize3, .butSize4, .butSize5 {
+  text-decoration: none;
+  color: white;
   font-size: 2.2em;
   font-weight: 500;
   line-height: normal;
   text-transform: uppercase;
   text-shadow: 4px 4px 7px rgba(0, 0, 0, .5);
 }
-.butSize1 {
-  width: 12%;
-  margin-right: 4%;
-}
-.butSize2 {
+.homeButton {
   width: 13%;
   margin-right: 4%;
 }
-.butSize3 {
-  width: 16%;
+.aboutButton {
+  width: 14%;
   margin-right: 4%;
 }
-.butSize4 {
-  width: 21%;
-  margin-right: 4%;
-}
-.butSize5 {
+.skillButton {
   width: 17%;
+  margin-right: 4%;
+}
+.expButton {
+  width: 22%;
+  margin-right: 4%;
+}
+.contactButton {
+  width: 18%;
 }
 /*********************************************************/
 /*********************-Quote Section-*********************/
@@ -225,31 +229,32 @@ nav > ul > li {
   border-radius: 50%;
 }
 /*********************************************************/
-/********************-Skill Set Section-******************/
+/******************-All Title Styling-********************/
 /*********************************************************/
-.skillSetSection {
-  width: 100%;
-  height: 1860px;
-  background: #2D9CDB;
-}
 .titleSection {
   width: 100%;
-  height: 116px;
-  left: -2px;
-  top: 1781px;
+  height: 100px;
   background: #F5F5F5;
   box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.5);
 }
 .titleSection h2 {
   width: 100%;
   margin: 0 auto;
-  padding-top: 27px;
+  padding-top: 14px;
   text-align: center;
   font-style: normal;
-  font-weight: bold;
+  font-weight: 400;
   line-height: normal;
   font-size: 48px;
   text-transform: capitalize;
+}
+/*********************************************************/
+/********************-Skill Set Section-******************/
+/*********************************************************/
+.skillSetSection {
+  width: 100%;
+  height: 1860px;
+  background: #2D9CDB;
 }
 /*********************************************************/
 /********************-Development-************************/
@@ -552,10 +557,84 @@ nav > ul > li {
 /*********************************************************/
 /*******************-Contact Section-*********************/
 /*********************************************************/
-.contactSection{
+.contactSection {
   width: 100%;
-  height: 500px;
-  border: solid 1px black;
+  height: 800px;
+  background-color: #2D9CDB;
+}
+.contactDiv {
+  width: 90%;
+  margin-left: 5%;
+  margin-top: 60px;
+  background-color: #F5F5F5;
+}
+form {
+  width: 95%;
+  margin-left: 2.5%;
+  padding: 30px 0 40px 0;
+}
+input {
+    width: 100%;
+    font-family: Futura;
+    font-size: 2.4em;
+    font-style: normal;
+    font-weight: 300;
+    padding: 12px 10px;
+    margin: 8px 0;
+    border: none;
+    border-bottom: 3.2px solid #2D9CDB;
+    background-color: #F5F5F5;
+}
+#msg {
+  padding-bottom: 100px;
+}
+.contactDiv span {
+  display: block;
+  font-size: 3em;
+  text-align: left;
+}
+.button{
+  width: 12%;
+  margin-left: 40%;
+  font-family: Futura;
+  font-style: normal;
+  font-weight: 600;
+  background-color: #E1E1E1;
+  border: none;
+  color: black;
+  padding: 10px 24px;
+  text-decoration: none;
+  font-size: 32px;
+  margin: 30px 2px 30px 0;
+  cursor: pointer;
+}
+/*********************************************************/
+/********************-Footer Section-*********************/
+/*********************************************************/
+footer{
+ background-color: #E1E1E1;
+
+}
+footer > h3 {
+  display: inline-block;
+  font-size: 2.4em;
+  font-weight: 400;
+  margin-top: 28px;
+  margin-left: 40px;
+}
+footer img {
+  width: 50px;
+  margin-top: 20px;
+}
+.twitter {
+  float: left;
+  margin-left: 19%;
+  height: 50px;
+}
+.linkedIn {
+  float: left;
+  margin-left: 40px;
+  height: 50px;
 }
 #main{
   width: 100%;
